tests/082_field_access_errors.err
pirxc compilation failed: exit status 1
Output: tests/082_field_access_errors.pirx:8:19: struct Vector does not have field z
tests/082_field_access_errors.pirx:11:27: struct Vector does not have field foo
tests/082_field_access_errors.pirx:11:35: struct Vector does not have field bar
Error: exit status 1
