tests/082_field_access_errors.pirx
struct Vector {
  x: int;
  y: int;
}

func main(): int {
  var v: Vector;
  printf("%d\n", v.z); // non-existent field

  // We used to have a bug where size in new() wasn't typechecked.
  var slice = new([]int, v.foo * v.bar);

  return 0;
}
